--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "browser-image-compression": "^2.0.0",
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
