--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.107",
     "@mui/material": "^5.10.9",
+    "@mui/x-date-pickers": "^5.0.14",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "browser-image-compression": "^2.0.0",
+    "dayjs": "^1.11.7",
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
