--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-simple-image-viewer": "^1.2.2",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
